src/components/nav/style.css
@import url("https://fonts.googleapis.com/css2?family=Anta&family=Archivo:ital,wght@0,100..900;1,100..900&family=Kanit&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:wght@400;500;700&family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  z-index: 10001; /* Higher than the navbar */
  overflow-y: auto;
  backdrop-filter: blur(10px);
}

.signup-modal {
  background-color: white;
  border-radius: 15px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);

  max-height: 90vh;
  /* height: auto; */
  padding: 0;
  border-radius: 40px;
  /* margin-top: 50vh; */

  border: 1px solid #c7c2c2;
}

.modal button {
  margin-top: 10px;
}

.navbar-container {
  position: fixed;
  top: 0vh;
  border-bottom: 1.5px solid rgb(186, 185, 185);
  padding: 1vw 0;
  display: flex;
  /* justify-content: center; */
  height: 5.5vh;
  width: 100%;
  background: #fff;
  z-index: 10000;
}

.navbar-container .active {
  border-bottom: 3px solid #a1e5cd;
}

.navbar-container .NavContainer {
  width: 70%;
  display: flex;
  /* justify-content: space-between; */
  align-items: center;
}

.navbar-container .NavContainer nav {
  display: flex;
  width: 40%;
  justify-content: space-between;
}

.navbar-container .NavContainer li {
  list-style-type: none;
  font-size: 1.2rem;
  text-align: center;
}

.navbar-container .NavContainer li a {
  text-decoration: none;
  color: #000;
  cursor: pointer;
  text-transform: uppercase;
  font-size: 1vw;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
  line-height: 3vw;
  margin-right: 4vw;
}

.navbar-container .NavContainer .logo,
.navbar-container .NavContainer .profile {
  display: flex;
  align-items: center;
}

.navbar-container .NavContainer .logo img {
  height: 6vh;
  width: 4vw;
  margin-right: 0.5vw;
}

.navbar-container .NavContainer .logo h4 {
  font-size: 1.7vw;
  font-family: "Kanit", sans-serif;
  font-weight: 500;
  font-style: normal;
  letter-spacing: 0.2vh;
}

.navbar-container .NavContainer .profile {
  cursor: pointer;
}
.navbar-container .NavContainer .login-signup-buttons button {
  padding: 0.6rem 1.6rem;
  margin: 1rem;
  /* background-color: #a1e5cd; */
  border-radius: 0.3rem;
  font-size: 1vw;
  font-weight: 500;
  cursor: pointer;
}
.login-signup-buttons {
  display: flex;
  flex-shrink: wrap;
  position: absolute;
  right: 0;
  margin-right: 4vw;
}
.logo {
  margin-left: 8vw;
  margin-right: 11vw;
}
.dsa-tracker-logo {
  font-size: 2.5vw;
  color: #13e098;
  padding-top: 0.5vh;
  margin-right: 0.3vw;
}
.navbar-container .NavContainer .profile .name {
  font-size: 1.3rem;
}

.navbar-container .NavContainer .profile img {
  height: 5vh;
  width: 2.5vw;
  border-radius: 50%;
  margin-left: 0.5vw;
}
.Navbar-Logout-Btn {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 45px;
  height: 45px;
  border: none;
  border-radius: 50%;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  transition-duration: 0.3s;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
  background-color: #a1e5cd;
  margin-left: 1vw;
}

/* plus sign */
.Navbar-Logout-sign {
  width: 100%;
  transition-duration: 0.3s;
  display: flex;
  align-items: center;
  justify-content: center;
}

.Navbar-Logout-sign svg {
  width: 17px;
}

/* .Navbar-Logout-sign svg path {
  fill: white;
} */
/* text */
/* .Navbar-Logout-text {
  position: absolute;
  right: 0%;
  width: 0%;
  opacity: 0;
  color: black;
  font-size: 1.2em;
  font-weight: 600;
  transition-duration: 0.3s;
  font-family: poppins;
}
.Navbar-Logout-Btn:hover {
  width: 140px;
  border-radius: 40px;
  transition-duration: 0.3s;
}

.Navbar-Logout-Btn:hover .Navbar-Logout-sign {
  width: 30%;
  transition-duration: 0.3s;
  padding-left: 20px;
}
.Navbar-Logout-Btn:hover .Navbar-Logout-text {
  opacity: 1;
  width: 70%;
  transition-duration: 0.3s;
  margin-top: 0.2vh;
}
.Navbar-Logout-Btn:active {
  transform: translate(2px, 2px);
} */

.login-signup-button-nav {
  display: inline-block;
  transition: all 0.2s ease-in;
  position: relative;
  overflow: hidden;
  z-index: 1;
  color: #090909;
  padding: 0.7em 1.7em;
  cursor: pointer;
  font-size: 1vw;
  border-radius: 0.5em;
  background: #a1e5cd;
  border: 1px solid #e8e8e8;
  box-shadow: 4px 4px 8px #c5c5c5, -4px -4px 8px #ffffff;
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: normal;
  text-transform: uppercase;
}

.login-signup-button-nav:active {
  color: #666;
  box-shadow: inset 2px 2px 4px #c5c5c5, inset -2px -2px 4px #ffffff;
}

.login-signup-button-nav:before {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%) scaleY(1) scaleX(1.25);
  top: 100%;
  width: 140%;
  height: 180%;
  background-color: rgba(0, 0, 0, 0.05);
  border-radius: 50%;
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.login-signup-button-nav:after {
  content: "";
  position: absolute;
  left: 55%;
  transform: translateX(-50%) scaleY(1) scaleX(1.45);
  top: 180%;
  width: 160%;
  height: 190%;
  background-color: #fff;
  border-radius: 50%;
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.login-signup-button-nav:hover {
  color: #000;
  border: 1px solid #fff;
}

.login-signup-button-nav:hover:before {
  top: -35%;
  background-color: #fff;
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

.login-signup-button-nav:hover:after {
  top: -45%;
  background-color: #fff;
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

.profile {
  position: absolute;
  right: 0;
}
.profile-name-nav {
  text-transform: uppercase;
  font-size: 1.3vw;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
  line-height: 3vw;
}
.user-image-navbar {
  font-size: 2.5vw;
  color: #000;
  padding-left: 0.5vw;
}
/* .logout-button-navbar {
  background-color: #fff;
  border: none;
}
.logout-icon-navbar {
  font-size: 2.5vw;
} */
.logout-button-navbar {
  padding: 0;
  margin: 0;
  border: none;
  background: none;
  cursor: pointer;
  margin-left: 1vw;
  margin-right: 1vw;
  margin-bottom: 0.5vh;
}

.logout-button-navbar {
  --primary-color: #111;
  --hovered-color: #1c9b6f;
  position: relative;
  display: flex;
  font-weight: 600;
  font-size: 1vw;
  gap: 0.5rem;
  align-items: center;
}

.logout-button-navbar p {
  margin: 0;
  position: relative;
  font-size: 1vw;
  color: var(--primary-color);
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.logout-button-navbar::after {
  position: absolute;
  content: "";
  width: 0;
  left: 0;
  bottom: -7px;
  background: var(--hovered-color);
  height: 2px;
  transition: 0.3s ease-out;
}

.logout-button-navbar p::before {
  position: absolute;
  /*   box-sizing: border-box; */
  content: "Logout";
  width: 0%;
  inset: 0;
  color: var(--hovered-color);
  overflow: hidden;
  transition: 0.3s ease-out;
}

.logout-button-navbar:hover::after {
  width: 100%;
}

.logout-button-navbar:hover p::before {
  width: 100%;
}

.logout-button-navbar:hover svg {
  transform: translateX(4px);
  color: var(--hovered-color);
}

.logout-button-navbar svg {
  color: var(--primary-color);
  transition: 0.2s;
  position: relative;
  width: 1vw;
  transition-delay: 0.2s;
}

